--- a/pages/introduction/introduction.wxss
+++ b/pages/introduction/introduction.wxss
@@ -45,6 +45,23 @@ page{
   margin-right: 20rpx;
   vertical-align: middle;
 }
+.mask_icon_transform{
+  transition: 1s all ease;
+  animation: love 2s 1;
+} 
+
+@keyframes love{
+  0%{
+    scale:1
+  }
+  50%{
+    scale: 2
+  }
+  100%{
+    scale: 1
+  }
+}
+
 .mask_list .mask_icon_message{
   width: 34rpx;
   height: 32rpx;
@@ -342,4 +359,55 @@ page{
   font-weight:400;
   color:rgba(255,255,255,1);
   text-align: center;
+}
+
+
+
+
+.maskCode{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toast_centerCode{
+  position: relative;
+  width: 686rpx;
+  height: 678rpx;
+  border-radius:10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+  padding:60rpx 40rpx 40rpx 40rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.toat_mainCode{
+    width: 100%;
+  height: 400rpx;
+  font-size:28rpx;
+  color: RGBA(153, 153, 153, 1);
+  text-align: center;
+}
+.toat_mainCode text{
+  display: block;
+  margin: 0 auto;
+}
+.toat_mainCode image{
+  width: 282rpx;
+  height: 282rpx;
+  display: block;
+  margin: 100rpx auto 0;
+}
+.mask_close{
+  position: absolute;
+  width: 48rpx;
+  height: 48rpx;
+  right: -24rpx;
+  top: -24rpx;
+  z-index: 99;
 }
