--- a/pages/music/index.wxss
+++ b/pages/music/index.wxss
@@ -106,3 +106,43 @@
 .video_list .type-icon{
   text-align: right;
 }
+
+
+.comment_input{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  padding-top: 10rpx;
+  background-color: #fff;
+  position: fixed;
+  bottom:0;
+  z-index: 1000;
+}
+.form{
+  width: 94%;
+  margin:0 auto;
+}
+.input-style{
+  width: 70%;
+  height: 40px;
+  border-radius: 25px;
+  background: #f3f3f5;
+  font-size: 14px;
+  /* text-indent: 15px; */
+  padding-left: 15px;
+  float: left;
+  color:#808286;
+}
+ 
+.btn{
+  width: 20%;
+  max-width: 20%;
+  font-size: 14px;
+  float: right;
+  border-radius: 10px;
+  color: #2c3036;
+  background: #f3f3f5;
+  letter-spacing: 2px;
+  padding:0;
+  line-height: 40px;
+}
