--- a/pages/myself/setting/setting.wxml
+++ b/pages/myself/setting/setting.wxml
@@ -6,8 +6,22 @@
       <switch color="#C4AB5B" checked="{{switchChecked}}" bindchange="switchChecked"/>
     </view>
   </view>
-  <view class="list-cell" bindtap="unsubscribe"> <text>注销资料</text></view>
+  <view class="list-cell" bindtap="edit"> <text>注销资料</text></view>
   <view class="list-cell" bindtap="not_open_yet"> <text>常见问题</text></view>
   <view class="list-cell" bindtap="not_open_yet"> <text>意见反馈</text></view>
   <view class="list-cell" bindtap="not_open_yet"> <text>联系我们</text></view>
+</view>
+
+
+<view class='maskCode' wx:if="{{noCode}}">
+  <view class='toast_centerCode'>
+    <form bindsubmit="addSelfIntroduce">
+      <view class='toat_mainCode'>
+        <textarea placeholder="注销原因" name="remark"></textarea>
+      </view>
+      <button class='toat_yes' form-type="submit">确定</button>
+      <button class='toat_yes toat_no' bindtap="cancel">取消</button>
+    </form>
+
+  </view>
 </view>
