--- a/pages/single/index.wxss
+++ b/pages/single/index.wxss
@@ -136,6 +136,21 @@
   background-size: 100% 28rpx;
   margin: 0 14rpx 0 22rpx;
 }
+.icons{
+  position: relative;
+}
+.icons-button{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  min-width: auto;
+  min-height: auto;
+  background: transparent;
+}
+
 
 .comment{
   width: 100%;
