--- a/pages/single/release/release.wxss
+++ b/pages/single/release/release.wxss
@@ -139,3 +139,24 @@
   vertical-align: middle;
   margin-right: 20rpx;
 }
+.getLocation{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1
+}
+.address_name{
+  text-overflow: -o-ellipsis-lastline;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+  width: 400rpx;
+  display: inline-block;
+  vertical-align: top;
+
+}
