--- a/pages/music/audio/audio.wxml
+++ b/pages/music/audio/audio.wxml
@@ -14,7 +14,7 @@
   </view>
 
   <view class="icon-box">
-    <view class="icon-type fl" bindtap="not_open_yet">
+    <view class="icon-type fl" bindtap="goBack">
       <image class="icon_list" src="/images/music/list.png"></image>
       <view class="icon_name">播放列表</view>
     </view>
@@ -70,10 +70,10 @@
         <view class="content">{{item.content}}</view>
         <view class="time-box clearfix">
           <!-- 点赞 -->
-          <view class="fl icons" bindtap="clickPraise" data-id="{{item.id}}" data-is_praise="{{item.isPraise}}">
+          <!-- <view class="fl icons" bindtap="clickPraise" data-id="{{item.id}}" data-is_praise="{{item.isPraise}}">
             <text class="icon_dianzan {{item.isPraise?'icon_dianzan_ok':''}}"></text>
             <text>{{item.praise}}</text>
-          </view>
+          </view> -->
           <!-- 转发 -->
           <view class="fl icons">
             <text class="icon_share"></text>
