--- a/pages/myself/person_info/person_info.wxss
+++ b/pages/myself/person_info/person_info.wxss
@@ -1,6 +1,7 @@
 /* pages/myself/setting/setting.wxss */
 .setting-view{
-  padding-top: 30rpx;
+  padding: 30rpx 0;
+
 }
 .list-cell{
   height: 100rpx;
@@ -49,4 +50,12 @@
   font-family:PingFangSC-Regular,PingFang SC;
   font-weight:400;
   color:rgba(255,255,255,1);
+}
+
+.input{
+  height: 100rpx;
+  line-height: 100rpx;
+  padding: 0;
+  text-align: right;
+  font-size: 32rpx;
 }
